<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Server Monitor</string>
    <string name="version">1.2.1</string>
    <string name="versionLabel">Version</string>
    <string name="refreshing_servers_title">Refreshing Servers</string>
    <string name="refreshing_servers_text">Refreshing servers. Please wait...</string>
    <string name="refreshing_server_title">Refreshing Server</string>
    <string name="refreshing_server_text">Refreshing server. Please wait...</string>
    <string name="delete_server_title">Remove Server</string>
    <string name="delete_server_text">Are you sure you want to remove this server?</string>
    <string name="delete_component_title">Remove Component</string>
    <string name="delete_component_text">Are you sure you want to remove this component?</string>
    <string name="component_offline">Component Offline</string>
    <string name="server_offline">Parent Server is offline</string>
    <string name="ping">Ping server</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="about">About</string>
    <string name="add_server">Add Server</string>
    <string name="refresh_all">Refresh All</string>
    <string name="settings">Settings</string>
    <string name="add_component">Add Component</string>
    <string name="save_component">Save Component</string>
    <string name="edit_component">Edit Component</string>
    <string name="remove_component">Remove Component</string>
    <string name="con_sel_intro">Please select the connection type to be used with this component.</string>
    <string name="tcp">TCP</string>
    <string name="tcp_ssh">TCP over SSH</string>
    <string name="server_name">Server name</string>
    <string name="host_name">Host name/IP address</string>
    <string name="component_name">Component Name</string>
    <string name="gen_port">Port</string>
    <string name="remote_port">Remote Port</string>
    <string name="local_port">Local Port</string>
    <string name="ssh_port">SSH Port</string>
    <string name="ssh_username">SSH Username</string>
    <string name="ssh_password">SSH Password</string>
    <string name="save_server">Save Server</string>
    <string name="edit_server">Edit Server</string>
    <string name="delete_server">Remove Server</string>
    <string name="refresh">Refresh</string>
    <string name="ping_timeout">Ping Timeout</string>
    <string name="unable_connect">Connection Timeout</string>
    <string name="unknown_host">Unknown Host</string>
    <string name="server_name_req">Server name is required.</string>
    <string name="host_name_req">Host name/IP addres is required.</string>
    <string name="component_name_req">Component name is required.</string>
    <string name="ssh_username_req">SSH username is required.</string>
    <string name="ssh_password_req">SSH password is required.</string>
    <string name="remote_port_req">Remote port is required.</string>
    <string name="remote_port_inv">Remote port is not valid. Valid ports are 0 - 65535.</string>
    <string name="local_port_req">Local port is required.</string>
    <string name="local_port_inv">Local port is not valid. Valid ports are 0 - 65535.</string>
    <string name="ssh_port_req">SSH port is required.</string>
    <string name="ssh_port_inv">SSH port is not valid. Valid ports are 0 - 65535.</string>
    <string name="port_req">Port is required.</string>
    <string name="port_inv">Port is not valid. Valid ports are 0 - 65535.</string>
    <string name="intro">Press the menu key and select Add Server to add a new server.</string>
    <string name="service_running">Service is running.</string>
    <string name="service_stopped">Service is stopped.</string>
    <string name="server_down">One or more servers is offline!</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="auth_error">Invalid username or password.</string>
    <string name="pref_start_auto">Start Automatically</string>
    <string name="pref_start_auto_on">Service will start on boot.</string>
    <string name="pref_start_auto_off">Service will not start on boot.</string>
    <string name="pref_poll_freq">Polling Frequency</string>
    <string name="pref_poll_freq_dia">Enter the polling frequency in minutes.</string>
    <string name="pref_poll_freq_sum">Polling frequency in minutes.</string>
    <string name="pref_enable_sound">Enable Sound</string>
    <string name="pref_enable_sound_on">Sound is enabled.</string>
    <string name="pref_enable_sound_off">Sound is disabled.</string>
    <string name="pref_enable_vibration">Enable Vibration</string>
    <string name="pref_enable_vibration_on">Vibration is enabled.</string>
    <string name="pref_enable_vibration_off">Vibration is disabled.</string>
    <string name="title_add_server">Server Monitor - Add Server</string>
    <string name="title_edit_server">Server Monitor - Edit Server</string>
    <string name="title_component_details">Server Monitor - Component Details</string>
    <string name="title_settings">Server Monitor - Settings</string>
    <string name="title_add_tcp">Server Monitor - Add TCP Component</string>
    <string name="title_add_ssh">Server Monitor - Add SSH Component</string>
    <string name="title_edit_tcp">Server Monitor - Edit SSH Component</string>
    <string name="title_edit_ssh">Server Monitor - Edit TCP Component</string>
    <string name="title_connection_type">Server Monitor - Connection Type</string>
    <string name="det_server">Server</string>
    <string name="det_component">Component</string>
    <string name="det_host">Host/IP</string>
    <string name="det_con_type">Connection Type</string>
    <string name="det_status">Status</string>
    <string name="det_message">Status Message</string>
    <string name="det_update">Last Updated</string>
</resources>
