<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:sm="http://schemas.android.com/apk/res/com.odinnet.servermonitor">
    <com.admob.android.ads.AdView android:id="@id/adView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" sm:backgroundColor="#ff000000" sm:primaryTextColor="#ffffffff" sm:secondaryTextColor="#ffcccccc" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/adView">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/component_name" />
            <EditText android:id="@id/txtComponentName" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remote_port" />
            <EditText android:id="@id/txtRemotePort" android:layout_width="fill_parent" android:layout_height="wrap_content" android:numeric="integer" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/local_port" />
            <EditText android:id="@id/txtLocalPort" android:layout_width="fill_parent" android:layout_height="wrap_content" android:numeric="integer" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ssh_port" />
            <EditText android:id="@id/txtSSHPort" android:layout_width="fill_parent" android:layout_height="wrap_content" android:numeric="integer" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ssh_username" />
            <EditText android:id="@id/txtSSHUsername" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ssh_password" />
            <EditText android:id="@id/txtSSHPassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:password="true" />
            <Button android:id="@id/btnAddComponent" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/save_component" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>